Fixed button spacing

--- a/styles.css
+++ b/styles.css
@@ -24,13 +24,14 @@ button {
     border: none;
     outline: 0;
     display: inline-block;
-    padding: 20px 50px;
+    padding: 0px;
     color: black;
     background-color: #EDF2F4;
     text-align: center;
     cursor: pointer;
     border-radius: 5px;
-    
+    width: 120px;
+    height: 70px;
     transition: all 0.3s;
 }
 
@@ -81,6 +82,5 @@ button:hover {
     justify-content: center;
     flex-wrap: wrap;
     gap: 20px;
-    margin-bottom: 10px;
 }
 
